# melito-peri-pascha

./: .gitignore  PROMPT.md  README.md  analysis_0001_0030.jsonl  analysis_0101_0130.jsonl  analysis_0221_0250.jsonl  analysis_0251_0280.jsonl  analysis_0281_0310.jsonl  analysis_0371_0400.jsonl  analysis_0431_0460.jsonl  analysis_0461_0490.jsonl  analysis_0491_0520.jsonl  analysis_0551_0580.jsonl  analysis_0611_0640.jsonl  analysis_0641_0670.jsonl  analysis_0701_0730.jsonl  analysis_0761_0790.jsonl  analysis_0821_0865.jsonl  analysis_all.jsonl  analysis_meta.json  analysis_qa_report.json  analysis_schema.json  change_log.txt  clean_greek_full.txt  clean_greek_full_phonetic.txt  clean_greek_full_simple.txt  cont.txt  greek_raw.txt  lemma_index.csv  pyproject.toml  tokens.csv  tts_generate.py  uncertain_readings.csv
.github/workflows/: deploy-pages.yml
analysis/: analysis_0031_0050.jsonl  analysis_0051_0070.jsonl  analysis_0071_0100.jsonl  analysis_0131_0160.jsonl  analysis_0161_0190.jsonl  analysis_0191_0220.jsonl  analysis_0311_0340.jsonl  analysis_0341_0370.jsonl  analysis_0401_0430.jsonl  analysis_0521_0550.jsonl  analysis_0581_0610.jsonl  analysis_0671_0700.jsonl  analysis_0731_0760.jsonl  analysis_0791_0820.jsonl
site/: app.js  data.js  index.html  styles.css
src/melito/: __init__.py  analysis_exports.py  cli.py  ocr.py  postprocess.py  preprocess.py  transliterate.py
